@@ -1,5 +1,4 @@
-This distribution has a large number of dependencies, and is best
-installed from CPAN.
+This distribution has several dependencies, and is best installed from CPAN.
 
   perl -MCPAN -e 'install OP'
 
@@ -8,5 +7,6 @@ Assuming dependencies have been installed, this may also be done manually.
   cd OP-xxxx
   perl Makefile.PL
   make
+  make test
   make install
 
