@@ -1,0 +1,23 @@
+#
+# File: .oprc
+#
+# Copyright (c) 2009 TiVo Inc.
+#
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Common Public License v1.0
+# which accompanies this distribution, and is available at
+# http://opensource.org/licenses/cpl1.0.txt
+#
+--- 
+dbPass: ~
+dbHost: localhost
+dbPort: 3306
+dbUser: op
+memcachedHosts: 
+  - 127.0.0.1:31337
+rcsBindir: /usr/bin
+rcsDir: RCS
+scratchRoot: /opt/op/scratch
+sqliteRoot: /opt/op/sqlite
+syslogHost: ~
+yamlRoot: /opt/op/yaml
